force-app/main/default/objects/RW_Exhibition_Access__c/RW_Exhibition_Access__c.object-meta.xml
<CustomObject>
    <label>Exhibition Access</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Exhibition Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibition Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>