force-app/main/default/objects/RW_Exhibition_Access__c/fields/RW_Exhibition_Master__c.field-meta.xml
<CustomField>
    <fullName>RW_Exhibition_Master__c</fullName>
    <label>Exhibition Master</label>
    <referenceTo>RW_Exhibition_Master__c</referenceTo>
    <relationshipLabel>Exhibition Access</relationshipLabel>
    <relationshipName>Exhibition_Access</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>