force-app/main/default/objects/RW_Exhibition_Access__c/fields/RW_Param1__c.field-meta.xml
<CustomField>
    <fullName>RW_Param1__c</fullName>
    <label>Param1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>