force-app/main/default/objects/RW_Exhibition_Access__c/fields/RW_Param2__c.field-meta.xml
<CustomField>
    <fullName>RW_Param2__c</fullName>
    <label>Param2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>