force-app/main/default/objects/RW_Exhibition_Access__c/fields/RW_Param4__c.field-meta.xml
<CustomField>
    <fullName>RW_Param4__c</fullName>
    <label>Param4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>