force-app/main/default/objects/RW_Exhibition_Access__c/fields/RW_Project__c.field-meta.xml
<CustomField>
    <fullName>RW_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Exhibition Access</relationshipLabel>
    <relationshipName>Exhibition_Access</relationshipName>
    <type>Lookup</type>
</CustomField>